@@ -30,6 +30,9 @@
 --- 2.3.5までのコードで gettext を利用している場合は、設定が明示的に必要です。
 -- "ethna add-project" コマンドに [-l|locale] オプションを追加
 -- スケルトンの日本語コメントをすべてASCIIに変更(好みのエンコーディングで編集できるようにするため)
+-- gettextを使わない場合向けに、Ethna独自のメッセージカタログを実装
+--- ini ファイルライクなフォーマットで msgid と翻訳を格納する方式
+--- Ethna_I18N#setLanguage で出力ロケールの切り替えも可能
 - [Breaking B.C] レンタルサーバを考慮して、[appid]_Controllerの include_path を、[appid]/lib を優先するように変更
 -- include_path の順番に依存するコードは少ないとは思いますが、移行の際は注意すべきです。
 - "ethna add-project" コマンドに [-s|skeldir] オプションを追加
